Update to JDK 16